--- a/sources/nextjs-app/package.json
+++ b/sources/nextjs-app/package.json
@@ -24,7 +24,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-html-parser": "^2.0.2",
@@ -41,13 +41,13 @@
     "styled-theme": "^0.3.3",
     "url-search-params-polyfill": "^8.1.1",
     "video.js": "^7.7.5",
-    "videojs-contrib-dash": "^5.1.0",
+    "videojs-contrib-dash": "^5.1.1",
     "videojs-youtube": "^2.6.1"
   },
   "devDependencies": {
-    "eslint": "<8.0.0",
-    "eslint-config-next": "12.0.4",
-    "ws": "5.2.3"
+    "eslint": "^8.4.1",
+    "eslint-config-next": "^12.0.7",
+    "ws": "^8.3.0"
   },
   "browserslist": {
     "production": [
