--- a/sources/nextjs-app/.env.production
+++ b/sources/nextjs-app/.env.production
@@ -1,7 +1,15 @@
-# This (PUBLIC_URL) should be the directory in Crafter CMS where
-# you want to serve your app assets. Should be somewhere inside `/static-assets`
-PUBLIC_URL=/static-assets/app
-# The 'siteName' freemarker variable set on 'templates/web/entry.ftl'
-REACT_APP_SITE_NAME=\${siteName!'null'}
-# The 'baseUrl' freemarker variable set on 'scripts/pages/page-home.groovy'
-REACT_APP_BASE_URL=\${baseUrl!'null'}
+HOST=localhost
+NEXT_PUBLIC_REACT_APP_CRAFTERCMS_BASE_URL=//localhost:3000
+
+# A blank REACT_APP_CRAFTERCMS_SITE_ID variable will make the app
+# try to find the crafterSite cookie which, provided you're
+# running both your local crafter and node dev web server for
+# the app are the same, it should be set for you when you created
+# the site. Manually set the here otherwise.
+REACT_APP_CRAFTERCMS_SITE_ID=video-center
+
+REACT_APP_PREVIEW_MODE=\${modePreview?c}
+NEXT_PUBLIC_REACT_APP_GRAPHQL_SERVER=http://localhost:8080/api/1/site/graphql
+REACT_APP_STATIC_ASSETS=/static-assets
+PUBLIC_URL=/static-assets/app/
+WDS_SOCKET_PORT=3000
