--- a/sources/nextjs-app/.babelrc
+++ b/sources/nextjs-app/.babelrc
@@ -1,3 +1,5 @@
+// Need to use .babelrc because of this issue
+// https://github.com/vercel/next.js/issues/30802
 {
   "presets": ["next/babel"],
   "plugins": [["styled-components", { "ssr": true }]]
